# LibraryManagement

./: CMakeLists.txt  README.md  library.json
include/: Library.h  LibraryApp.h  LmsDefines.h
src/: Library.cpp  LibraryApp.cpp  main.cpp
